# ollama4j-examples

./: .gitignore  Makefile  README.md  pom.xml
docker/: docker-compose.yml
docker/config/grafana/provisioning/dashboards/: ollama4j.json
docker/config/grafana/provisioning/datasources/: datasource.yml
docker/config/prometheus/: prometheus.yml
src/main/java/io/github/ollama4j/: BatchAutoRunner.java
src/main/java/io/github/ollama4j/examples/: AgentExample.java  AnnotatedToolCallingExample.java  ChatExample.java  ChatStreamingExample.java  ChatStreamingWithThinkingExample.java  ChatStreamingWithTokenConcatenationExample.java  ChatWithConsoleHandlerExample.java  ChatWithCustomSystemPrompt.java  ChatWithImage.java  ChatWithMCPToolExample.java  ChatWithThinkingModelExample.java  ChatWithTools.java  ConsoleOutputStreamHandlerExample.java  CouchbaseToolCallingExample.java  CreateModel.java  DeleteModel.java  EmbeddingsGenerationExample.java  FindLibraryModel.java  FindModelTagFromLibraryExample.java  Generate.java  GenerateAsync.java  GenerateAsyncWithThinking.java  GenerateEmbeddings.java  GenerateEmbeddingsOld.java  GenerateEmbeddingsWIthRequestModel.java  GenerateEmbeddingsWithRequestModel.java  GenerateStreaming.java  GenerateStreamingWithTokenConcatenation.java  GenerateStructuredOutput.java  GenerateStructuredOutputMappedToObject.java  GenerateWithConsoleHandler.java  (+25 more)
src/main/resources/: Makefile  agent.yaml  config.properties  logback.xml  mcp-config.json  pyproject.toml  requirements.txt  test-config.properties  weather_gov_us.py  weather_open_meteo.py
(+21 files in other folders)
